Alhamdullah Ya Allah

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build:md": "node scripts/buildMarkdown.js",
     "dev": "vite dev",
     "build": "vite build && postbuild",
-    "postbuild": "rm -rf build/client/{images,sounds,md}",  
+    "postbuild": "rm -rf build/client/{images,sounds,md}",
     "preview": "vite preview",
     "gen:syllabus": "node syllabus/genSyllabus.js"
   },
@@ -27,12 +27,13 @@
     "@prisma/client": "^6.12.0",
     "@zerodevx/svelte-toast": "^0.9.5",
     "better-sqlite3": "^12.2.0",
+    "cheerio": "^1.0.0-rc.12",
     "express": "^5.1.0",
+    "gray-matter": "^4.0.3",
     "howler": "^2.2.4",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "katex": "^0.16.22",
-    "marked": "^15.0.12",
     "mathjs": "^12.3.0",
     "nanoid": "^5.1.5",
     "nodemon": "^3.1.10",
