--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@prisma/client": "^6.12.0",
     "@svgdotjs/svg.js": "^3.2.4",
     "@zerodevx/svelte-toast": "^0.9.5",
+    "bcryptjs": "^3.0.2",
     "better-sqlite3": "^12.2.0",
     "chalk": "^5.5.0",
     "howler": "^2.2.4",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "katex": "^0.16.22",
     "mathjs": "^12.3.0",
