--- a/package.json
+++ b/package.json
@@ -6,18 +6,23 @@
     "dev:deploy": "nodemon index.js",
     "dev": "vite dev",
     "preview": "vite preview",
+    "test": "vitest",
     "build:syllabus": "node syllabus/genSyllabus.js"
   },
   "devDependencies": {
     "@sveltejs/adapter-node": "^4.0.1",
-    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/kit": "^2.30.1",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@testing-library/jest-dom": "^6.7.0",
+    "@testing-library/svelte": "^5.2.8",
+    "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.16",
     "dotenv": "^16.0.3",
     "postcss": "^8.4.30",
     "prisma": "^6.12.0",
     "svelte": "^4.0.5",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vitest": "^3.2.4"
   },
   "type": "module",
   "dependencies": {
