--- a/package.json
+++ b/package.json
@@ -41,9 +41,10 @@
     "mathjs": "^12.3.0",
     "nodemon": "^3.1.10",
     "svelte-katex": "^0.1.2",
+    "sveltekit-superforms": "^2.27.1",
     "tailwindcss": "^3.3.3",
     "taleem-syllabusbuilder": "^1.0.0",
-    "zod": "^3.24.4"
+    "zod": "^3.25.76"
   },
   "description": "",
   "main": "editor",
