--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
   "version": "0.0.2",
   "private": true,
   "type": "module",
-
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest run --pool=threads --poolOptions.threads.singleThread "
   },
-
   "devDependencies": {
     "@sveltejs/adapter-node": "^4.0.1",
     "@sveltejs/kit": "^2.30.1",
@@ -25,24 +23,27 @@
     "vite": "^6.0.0",
     "vitest": "^3.2.4"
   },
-
   "dependencies": {
     "@prisma/client": "^6.12.0",
     "@zerodevx/svelte-toast": "^0.9.5",
     "apexcharts": "^5.3.5",
+    "arabic-reshaper": "^1.1.0",
     "bcryptjs": "^3.0.2",
     "better-sqlite3": "^12.2.0",
+    "bidi-js": "^1.0.3",
+    "canvas": "^3.2.0",
+    "csv-parse": "^6.1.0",
     "howler": "^2.2.4",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "katex": "^0.16.22",
+    "openseadragon": "^5.0.1",
     "svelte-apexcharts": "^1.0.2",
     "svelte-katex": "^0.1.2",
     "tailwindcss": "^3.3.3",
     "zod": "^3.25.76"
   },
-
   "description": "",
   "main": "editor",
   "author": "",
