--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jwt-decode": "^4.0.0",
     "katex": "^0.16.22",
     "openseadragon": "^5.0.1",
+    "sharp": "^0.34.5",
     "svelte-apexcharts": "^1.0.2",
     "svelte-katex": "^0.1.2",
     "tailwindcss": "^3.3.3",
